	regular expression interface (regcomp, regexec, etc).
	* lib/portage_misc.cc, lib/portage_misc.hh, lib/portage_find.cc,
	lib/portage_find.hh: Moved all find_package related stuff to
	portage_find.{cc,hh}.  Added find_package_regex_in() and
	find_package_regex().
	* src/herdstat.cc, src/options.cc: Added --regex and --extended
	options.
	* src/action_pkg_handler.cc: Added regex_T support.

2005-04-22 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.0_rc1)

2005-04-21 Aaron Walker <ka0ttic@gentoo.org>

	* src/overlaydisplay.hh: Added OverlayDisplay_T class for keeping
	track of which overlays are used, their number, and then displaying
	the little overlay key upon destruction.
	* src/action_meta_handler.cc, src/action_versions_handler.cc: Make
	use of OverlayDisplay_T for marking packages/categories that appear in
	overlays.
	* src/action_pkg_handler.cc: Fixed bug where pkg handler would not
	even search the metadata.xml's if the developer/herd is not listed in
	herds.xml.

2005-04-20 Aaron Walker <ka0ttic@gentoo.org>

	* lib/portage_misc.cc, lib/portage_misc.hh,
	src/action_meta_handler.cc, src/action_versions_handler.cc: Added
	optional argument to find_package that determines whether or not to
	search overlays.
	* src/options.cc, src/herdstat.cc: Added --no-overlay option.
	* bashcomp, doc/herdstat.1.in: Added --versions and --no-overlay.
	* src/action_meta_handler.cc, src/action_pkg_handler.cc: Removed the
	catch XMLParser_E clause since we catch it in main().

2005-04-19 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.0_pre2)

2005-04-18 Aaron Walker <ka0ttic@gentoo.org>

	* src/formatter.cc: fixed bug in append(string, vector) that caused an
	abort if data.size() == 0.  Thanks to tove for the heads up.
	* lib/portage_misc.cc, lib/portage_misc.hh: Move find_package to
	find_package_in and make find_package take a config_T object and call
	find_package_in for PORTDIR and PORTDIR_OVERLAY's.  Moved