@@ -42,27 +42,54 @@
 bool
 portage::in_pkg_dir()
 {
-    const char *pwd = util::getcwd().c_str();
-    DIR *dir = NULL;
-    struct dirent *d = NULL;
+//    const char *pwd = util::getcwd().c_str();
+//    DIR *dir = NULL;
+//    struct dirent *d = NULL;
+//    bool ebuild = false, filesdir = false;
+
+//    if (not (dir = opendir(pwd)))
+//        throw util::bad_fileobject_E(pwd);
+
+//    while ((d = readdir(dir)))
+//    {
+//        char *s = NULL;
+//        if ((s = std::strrchr(d->d_name, '.')))
+//        {
+//            if (std::strcmp(++s, "ebuild") == 0)
+//                ebuild = true;
+//        }   
+//        else if (std::strcmp(d->d_name, "files") == 0)
+//            filesdir = true;
+//    }
+
+//    closedir(dir);
+//    return (ebuild and filesdir);
+
+    return portage::is_pkg_dir(util::getcwd());
+}
+
+/*
+ * Is the given path a package directory?
+ */
+
+bool
+portage::is_pkg_dir(const util::path_T &path)
+{
+    if (not util::is_dir(path))
+        return false;
+
     bool ebuild = false, filesdir = false;
+    const util::dir_T dir(path);
+    util::dir_T::const_iterator d;
 
-    if (not (dir = opendir(pwd)))
-        throw util::bad_fileobject_E(pwd);
-
-    while ((d = readdir(dir)))
+    for (d = dir.begin() ; d != dir.end() ; ++d)
     {
-        char *s = NULL;
-        if ((s = std::strrchr(d->d_name, '.')))
-        {
-            if (std::strcmp(++s, "ebuild") == 0)
-                ebuild = true;
-        }   
-        else if (std::strcmp(d->d_name, "files") == 0)
+        if (portage::is_ebuild(*d))
+            ebuild = true;
+        else if (d->basename() == "files")
             filesdir = true;
     }
 
-    closedir(dir);
     return (ebuild and filesdir);
 }
 
