@@ -34,6 +34,47 @@ action_which_handler_T::operator() (std::vector<std::string> &opts)
     std::ostream *stream = optget("outstream", std::ostream *);
     portage::config_T config(optget("portage.config", portage::config_T));
     const std::string real_portdir(config.portdir());
+    const bool regex = optget("regex", bool);
+
+    if (optget("all", bool))
+    {
+        std::cerr << "which action handler does not support the 'all' target."
+            << std::endl;
+        return EXIT_FAILURE;
+    }
+    else if (regex and opts.size() > 1)
+    {
+        std::cerr << "You may only specify one regular expression."
+            << std::endl;
+        return EXIT_FAILURE;
+    }
+    else if (regex)
+    {
+        util::regex_T regexp;
+        std::string re(opts.front());
+        opts.clear();
+
+        if (optget("eregex", bool))
+            regexp.assign(re, REG_EXTENDED|REG_ICASE);
+        else
+            regexp.assign(re, REG_ICASE);
+
+        const std::multimap<std::string, std::string> matches =
+            portage::find_package_regex(config, regexp, optget("overlay", bool));
+        std::multimap<std::string, std::string>::const_iterator m;
+        for (m = matches.begin() ; m != matches.end() ; ++m)
+        {
+            if (std::find(opts.begin(), opts.end(), m->second) == opts.end())
+                opts.push_back(m->second);
+        }
+
+        if (matches.empty())
+        {
+            std::cerr << "Failed to find any packages matching '" << re << "'."
+                << std::endl;
+            return EXIT_FAILURE;
+        }
+    }
 
     std::vector<std::string>::iterator i;
     for (i = opts.begin() ; i != opts.end() ; ++i)
